contrib/k8s/webhook/manifests.yaml
# Copyright 2025 SAP SE or an SAP affiliate company and cobaltcore-dev contributors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ceph-cobaltcore-sap-com-v1alpha1-remotearbiter
  failurePolicy: Fail
  name: mremotearbiter-v1alpha1.kb.io
  rules:
  - apiGroups:
    - ceph.cobaltcore.sap.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - remotearbiters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ceph-cobaltcore-sap-com-v1alpha1-remotecluster
  failurePolicy: Fail
  name: mremotecluster-v1alpha1.kb.io
  rules:
  - apiGroups:
    - ceph.cobaltcore.sap.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - remoteclusters
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-ceph-cobaltcore-sap-com-v1alpha1-remotearbiter
  failurePolicy: Fail
  name: vremotearbiter-v1alpha1.kb.io
  rules:
  - apiGroups:
    - ceph.cobaltcore.sap.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - remotearbiters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-ceph-cobaltcore-sap-com-v1alpha1-remotecluster
  failurePolicy: Fail
  name: vremotecluster-v1alpha1.kb.io
  rules:
  - apiGroups:
    - ceph.cobaltcore.sap.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - remoteclusters
  sideEffects: None
